--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
-
-<img class="background" src="https://media.istockphoto.com/id/1129572695/photo/keto-diet-concept-salmon-avocado-eggs-nuts-and-seeds.jpg?s=612x612&w=0&k=20&c=8JHnkRKetGzRcXVLUvx1tai7kN2oBf24lRevOeYaSvs=">
+<div>
+  <img class="background" src="https://media.istockphoto.com/id/1129572695/photo/keto-diet-concept-salmon-avocado-eggs-nuts-and-seeds.jpg?s=612x612&w=0&k=20&c=8JHnkRKetGzRcXVLUvx1tai7kN2oBf24lRevOeYaSvs=">
+</div>
