--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My Website</title>
+    <title>BudgetFit</title>
     <style>
       body {
         background-image: url("https://media.istockphoto.com/id/1129572695/photo/keto-diet-concept-salmon-avocado-eggs-nuts-and-seeds.jpg?s=612x612&w=0&k=20&c=8JHnkRKetGzRcXVLUvx1tai7kN2oBf24lRevOeYaSvs=");
@@ -29,8 +29,36 @@
   </head>
   <body>
     <div class="container">
-      <h1>Welcome to My Website</h1>
-      <p>This is an example of a website with a basic background image and text over it.</p>
+      <h1>Welcome to the BudgetFit Auxiliary Site</h1>
+      <h4>CS 426 Senior Project in Computer Science, Spring 2023, at UNR/CSE Department</h4>
+      <p>Team Members:</p>
+      <ul>
+        <li>Kaden Nesch</li>
+        <li>Dustin Mader</li>
+        <li>Alexander Ram</li>
+        <li>Clifford Lewis</li>
+      </ul>
+      <p>Instructors:</p>
+      <ul>
+        <li>David Feil-Seifer</li>
+        <li>Devrin Lee</li>
+        <p>Advisor: Vinh Le (UNR OIT)</p>
+        <p>Project Manager: Joanna Lopez</p>
+    </div>
+    <div class="container">
+      <h3>About BudgetFit</h3>
+      <p>
+        BudgetFit is a web application that helps the average American optimize their food purchases for price and nutritional value. The average American spends over $8,000 annually on food purchases alone, which is expected to increase throughout 2023, according to the USDA. Meanwhile, the NIH states that over 40% of American adults are obese, putting millions at risk for numerous health problems down the line. Our application strives to help users find the food items with the lowest price and the best health benefits at the stores in the user's area. The road to a balanced diet and a lifetime of savings begins with BudgetFit. Our goal is to create a web application that enables users to create and save shopping lists and fill them with the food items they want, filtered by price and nutritional content BudgetFit sorts through the data it collects from nearby stores and determines which food items have a positive effect on the user's diet and their budget. The application points out specific attributes about the grocery items users intend to purchase and offers feedback to help with maintaining proper caloric intake, avoiding foods outside of their diet and allergies, and understanding how much they spend. The purpose is to provide users with more control over their diet and expenditures BudgetFit takes the user from shopping lists to home cooking and onto bundles of savings.
+      </p>
+    </div>
+    <div class="container">
+      <h3>Resources Used</h3>
+        <ul>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
     </div>
   </body>
 </html>
