--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       }
       
       .container {
-        text-align: center;
+        text-align: justify;
         padding-top: 50px;
         color: white;
       }
@@ -23,7 +23,14 @@
       
       p {
         font-size: 24px;
+        margin-left: auto;
+        margin-right: auto;
         margin-bottom: 20px;
+      }
+      ul {
+        display: block;
+        list-style-type: disc;
+        margin-left: auto;
       }
     </style>
   </head>
@@ -54,10 +61,17 @@
     <div class="container">
       <h3>Resources Used</h3>
         <ul>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
+          <li>Python API Development Fundamentals: Develop a full-stack web application with Python and Flask
+Chan, J., Chung, R., & Huang, J. (2019). Python Api Development Fundamentals: Develop a full-stack web application with Python and Flask. Packt.</li>
+          <li>Fats and Fatty Acid Requirements for Adults
+Elmadfa, I. & Kornsteiner, M. (2009) Fats and Fatty Acid Requirements for Adults. Annals of nutrition and metabolism. [Online] 55 (1/3), 56–75.</li>
+          <li>Caloric Intake and its Effect on Aging and Cognitive Slowing: A Review of the Research into Intermittent Fasting 
+            Talemal, L. (2021). Caloric Intake and its Effect on Aging and Cognitive Slowing: A Review of the Research into Intermittent Fasting. Journal of Nutritional Medicine and Diet Care. https://doi.org/10.23937/2572-3278/1510052</li>
+          <li>National Institute of Diabetes and Digestive and Kidney Diseases
+U.S. Department of Health and Human Services. (n.d.). Overweight & Obesity Statistics. National Institute of Diabetes and Digestive and Kidney Diseases. Retrieved February 22, 2023, from https://www.niddk.nih.gov/health-information/health-statistics/overweight-obesity</li>
+          <li>U.S. Department of Labor. (n.d.). Consumer Expenditures in 2021. U.S. Bureau of Labor Statistics. Retrieved February 22, 2023, from https://www.bls.gov/opub/reports/consumer-expenditures/2021/home.htm</li>
+          <li>USDA Economic Research Service
+U.S. Department of Agriculture. (n.d.). Food Price Outlook, 2023. Economic Research Service. Retrieved February 22, 2023, from https://www.ers.usda.gov/data-products/food-price-outlook/summary-findings/</li>
         </ul>
     </div>
   </body>
