--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       .container {
         text-align: justify;
         padding-top: 50px;
+        max-width: 800px;
         color: white;
       }
       
@@ -26,6 +27,7 @@
         margin-left: auto;
         margin-right: auto;
         margin-bottom: 20px;
+        max-width: 800px;
       }
       ul {
         display: block;
