--- a/index.html
+++ b/index.html
@@ -26,12 +26,13 @@
         margin-left: auto;
         margin-right: auto;
         margin-bottom: 20px;
-        max-width: 800px;
+        padding-left: 20px;
       }
       ul {
         display: block;
         list-style-type: disc;
         margin-left: auto;
+        padding-left: 20px;
       }
     </style>
   </head>
