--- a/index.html
+++ b/index.html
@@ -27,12 +27,15 @@
         margin-right: auto;
         margin-bottom: 20px;
         padding-left: 20px;
+        padding-right: 20px;
+        width: 80%;
       }
       ul {
         display: block;
         list-style-type: disc;
         margin-left: auto;
         padding-left: 20px;
+        width: 80%;
       }
     </style>
   </head>
