--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         display: block;
         list-style-type: disc;
         margin-left: auto;
+        width: 80%;
       }
     </style>
   </head>
@@ -52,8 +53,14 @@
       <ul>
         <li>David Feil-Seifer</li>
         <li>Devrin Lee</li>
-        <p>Advisor: Vinh Le (UNR OIT)</p>
-        <p>Project Manager: Joanna Lopez</p>
+        <p>Advisor:</p>
+        <ul>
+            <li>Vinh Le (UNR OIT)</li>
+          </ul>
+        <p>Project Manager:</p>
+        <ul>
+            <li>Joanna Lopez</li>
+        </ul>
     </div>
     <div class="container">
       <h3>About BudgetFit</h3>
