--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         display: block;
         list-style-type: disc;
         margin-left: auto;
+        margin-right: auto;
         width: 80%;
       }
     </style>
@@ -53,8 +54,8 @@
       <ul>
         <li>David Feil-Seifer</li>
         <li>Devrin Lee</li>
-        <p>Advisor:</p>
       </ul>
+      <p>Advisor:</p>
       <ul>
         <li>Vinh Le (UNR OIT)</li>
       </ul>
